[Mac][Material Design] Add MD hover to bookmark items in menus.

The cl to update the bookmark bar to Material Design landed, but did
not update the look of bookmark items in folder menus.

R=avi@chromium.org
BUG=612591

Review-Url: https://codereview.chromium.org/1987203003
Cr-Commit-Position: refs/heads/master@{#394621}

Former-commit-id: 36c39b3f89c59537595d8f6da0dbfdcdac530957